Revised module03 slides and speaker notes

--- a/modules/5507-02-hw.md
+++ b/modules/5507-02-hw.md
@@ -20,7 +20,7 @@ Take the program, [m02-5507-simon-cigarettes.sas][git1], and modify it so that
 + your output is stored as a pdf file, and
 + your data is in a file separate from the program
 
-Include your code and your output in a single PDF file. This assignment will be graded pass/fail, but future assignments will use [this grading rubric][git2]
+Include your code and your output in a single PDF file. This assignment will be graded pass/fail, but future assignments will use [this grading rubric][git2].
 
 #### Hw02b
 
@@ -30,11 +30,11 @@ Use the dataset from the previous homework assignment and answer the following q
 
 Q1. What brand has the highest tar?
 
-Q2. What drand has the lowest tar?
+Q2. What brand has the lowest tar?
 
 Q3. What is the correlation between tar and nicotine? Interpret this correlation.
 
-Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2]
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2].
 
 #### Hw02c
 
@@ -46,7 +46,7 @@ Q4. Draw a histogram for tar, nicotine, weight, and co. Do these histograms prov
 
 Q5. Draw a scatterplot showing the relationship between tar and nicotine (tar on the x-axis, nicotine on the y-axis). Include a linear trend line. Is there a positive or negative relationship between these two variables.
 
-Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2]
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2].
 
 #### Discuss02
 
