Updated module02 videos

--- a/modules/5507-02-videos.md
+++ b/modules/5507-02-videos.md
@@ -6,30 +6,48 @@ date: Created 2021-05-29
 
 ### Videos and handouts, Module02
 
-#### M02-V01. Delimited files
+#### M02-V01. Rules for variable names
 
 + Video available in [Panopto format][m02v01]
-+ Slides and speaker notes available in [pdf format][git1]
++ Slides available in [pdf format][git1]
 
-#### M02-V02. First line variable names
+#### M02-V02. Variable labels
 
 + Video available in [Panopto format][m02v02]
 + See above for slides and speaker notes
 
-#### M02-V03. Evil tab character
+#### M02-V03. Printing row with largest/smallest variables
 
 + Video available in [Panopto format][m02V03]
-+ Slides are not yet available
++ See above for slides and speaker notes
 
-#### M02-V04. If you still need a bit of help with the homework
+#### M02-V04. Missing values
 
 + Video available in [Panopto format][m02v04]
-+ Slides are not yet available
++ See above for slides and speaker notes
 
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002149
+#### M02-V05. Simple transformations, histograms
 
-[m02v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6de8440a-1bd4-4d2e-9631-aa7f015b2953
-[m02v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4954f8af-d8be-4657-bc24-aa7f015edf92
-[m02v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0ce9339f-f3c9-4bb3-908e-aa790131a2a9
-[m02v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c53d9a11-aa2e-4ee0-ac8e-aa78017aaea2
++ Video available in [Panopto format][m02v05]
++ See above for slides and speaker notes
+
+#### M02-V06. Correlations and scatterplots
+
++ Video available in [Panopto format][m02v06]
++ See above for slides and speaker notes
+
+#### M02-V07. Your homework
+
++ Video available in [Panopto format][m02v07]
++ Live demo. No slides or speaker notes
+
+[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002170
+
+[m02v01]: 
+[m02v02]: 
+[m02v03]: 
+[m02v04]: 
+[m02V05]: 
+[m02V06]: 
+[m02V07]: 
 
