--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -1,41 +1,35 @@
 ---
-title: "MEDB 5507, Introduction to SAS, Module03, Videos"
+title: "MEDB 5507, Introduction to SAS, Module02, Videos"
 authors: Steve Simon
 date: Created 2021-05-29
 ---
 
-### Videos and handouts, Module03
+### Videos and handouts, Module02
 
-#### M03-V01. libname, filename, print
+#### M02-V01. Delimited files
 
-+ Video available in [Panopto format][m03v01]
-+ Slides available in [pdf format][git1]
++ Video available in [Panopto format][m02v01]
++ Slides and speaker notes available in [pdf format][git1]
 
-#### M03-V02. Variable names, proc means
+#### M02-V02. First line variable names
 
-+ Video available in [Panopto format][m03v02]
++ Video available in [Panopto format][m02v02]
 + See above for slides and speaker notes
 
-#### M03-V03. Missing values
+#### M02-V03. Evil tab character
 
-+ Video available in [Panopto format][m03V03]
-+ See above for slides and speaker notes
++ Video available in [Panopto format][m02V03]
++ Slides are not yet available
 
-#### M03-V04. Simple transformations, histograms
+#### M02-V04. If you still need a bit of help with the homework
 
-+ Video available in [Panopto format][m03v04]
-+ See above for slides and speaker notes
++ Video available in [Panopto format][m02v04]
++ Slides are not yet available
 
-#### M03-V05. Correlations and scatterplots
+[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002149
 
-+ Video available in [Panopto format][m03v05]
-+ See above for slides and speaker notes
-
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002170
-
-[m03v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=97d00c33-5197-4a0f-9f16-aa6f014da077
-[m03v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=996a7c89-0e5a-4118-92ce-aa6f015599d0
-[m03v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d5794c7d-3933-488c-bc3c-aa6f015a3d7c
-[m03v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=17b9a21d-df54-4705-928d-aa6f016161d4
-[m03V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bd9a8ec9-6cee-4f5a-b83b-aa6f0165b591
+[m02v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6de8440a-1bd4-4d2e-9631-aa7f015b2953
+[m02v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4954f8af-d8be-4657-bc24-aa7f015edf92
+[m02v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0ce9339f-f3c9-4bb3-908e-aa790131a2a9
+[m02v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c53d9a11-aa2e-4ee0-ac8e-aa78017aaea2
 
