--- a/modules/5507-02-videos.md
+++ b/modules/5507-02-videos.md
@@ -10,6 +10,7 @@ date: Created 2021-05-29
 
 + Video available in [Panopto format][m02v01]
 + Slides available in [pdf format][git1]
++ m02-5507-simon-continuous-variables.sas available in [text format][git2]
 
 #### M02-V02. Variable labels
 
@@ -41,13 +42,14 @@ date: Created 2021-05-29
 + Video available in [Panopto format][m02v07]
 + Live demo. No slides or speaker notes
 
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002170
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m02-5507-simon-slides-and-speaker-notes.pdf
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m02-5507-simon-continuous-variables.sas
 
-[m02v01]: 
-[m02v02]: 
-[m02v03]: 
-[m02v04]: 
-[m02V05]: 
-[m02V06]: 
-[m02V07]: 
+[m02v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aa601083-671c-4a47-a8ea-ad490166aed9
+[m02v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f1f3ef8-4476-45d5-bb99-ad49016bcf02
+[m02v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=395b874b-6abb-4b5b-b80a-ad49016d7259
+[m02v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cc9d47d4-00ae-4d1b-b06a-ad4901703569
+[m02V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=b78c9618-6533-434d-94d8-ad490172072d
+[m02V06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=efc9093d-c0a0-4f19-b149-ad490173671a
+[m02V07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e4dd8331-2a1a-4bc1-ab2d-ad4901788e27
 
