Updated yaml headers

--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -1,5 +1,10 @@
 ---
 title: "MEDB 5507, Introduction to SAS, Module03, Homework"
+authors: Steve Simon
+date: Created 2021-05-29
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") }) 
 ---
 
 ### Assignments, due start of week 7
