--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -2,6 +2,9 @@
 title: "MEDB 5507, Introduction to SAS, Module04, Videos"
 authors: Steve Simon
 date: Created 2021-05-29
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") }) 
 ---
 
 ### Videos and handouts, Module04
