--- a/modules/5507-02-hw.md
+++ b/modules/5507-02-hw.md
@@ -44,7 +44,7 @@ Use the dataset from the previous homework assignment and answer the following q
 
 Q4. Draw a histogram for tar, nicotine, weight, and co. Do these histograms provide evidence that the data follows a classic bell shaped curve?
 
-Q5. Draw a scatterplot showing the relationship between tar and nicotine (tar on the x-axis, nicotine on the y-axis). Include a linear trend line. Is there a positive or negative relationship between these two variables.
+Q5. Draw a scatterplot showing the relationship between tar and nicotine (tar on the x-axis, nicotine on the y-axis). Include a linear trend line. Is there a positive or negative relationship between these two variables?
 
 Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2].
 
